# hypercube

./: .flake8  .gitignore  .gitmodules  .pylintrc  CHANGELOG.md  Pipfile  hypercube.db  pyproject.toml
docs/: .buildinfo  genindex.html  hypercube.html  hypercube.model.html  hypercube.model.local_db.html  hypercube.model.selectors.html  hypercube.model.serials_of_interest.html  hypercube.model.tesseract_db.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_modules/: hypercube.html  index.html
docs/_modules/hypercube/model/: local_db.html  selectors.html  serials_of_interest.html
docs/_sources/: hypercube.model.rst.txt  hypercube.model.selectors.rst.txt  hypercube.model.tesseract_db.rst.txt  index.rst.txt
docsource/: conf.py  hypercube.model.local_db.rst  hypercube.model.serials_of_interest.rst  hypercube.rst  make.bat
docsource/.cache/: environment.pickle  hypercube.doctree  hypercube.model.doctree  hypercube.model.local_db.doctree  hypercube.model.selectors.doctree  hypercube.model.serials_of_interest.doctree  hypercube.model.tesseract_db.doctree  index.doctree
hypercube/: __init__.py  side_script.py
hypercube/Model/: local_db.py  selectors.py  serials_of_interest.py  tesseract_db.py
hypercube/Model/serials_of_interest/: __init__.py
hypercube/tasks/: update_interests.py
hypercube_dash/: __init__.py
hypercube_dash.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
hypercube_dash/Model/: local_db.py  selectors.py  tesseract_db.py
hypercube_dash/tasks/: update_interests.py
tests/: test_hypercube_dash.py
(+1 files in other folders)
