[tool.poetry]
name = "hypercube"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
sqlalchemy = "^1.3"
hug = "^2.5"
pyodbc = "^4.0"
hug_middleware_cors = "^1.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pylint = "^2.3"
black = {version = "^18.3-alpha.0",allows-prereleases = true}
factory-boy = "^2.12"
faker = "^1.0"
mypy = "^0.711.0"
flake8 = "^3.7"
pre-commit = "^1.17"
coverage = "^4.5"
flake8-bugbear = "^19.3"
bandit = "^1.6"
pydocstyle = "^3.0"

[tool.poetry.scripts]
serve = "hypercube:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

